# openclaw-rs

./: .dockerignore  .gitignore  .windsurfignore  .windsurfrules  Cargo.toml  Dockerfile  POSTGRES-MIGRATION-PLAN.md  README.md  ROADMAP.md  UPSTREAM.json  docker-compose.gateway.yml  docker-compose.postgres.yml  docker-test.sh
crates/openclaw-agent/: Cargo.toml
crates/openclaw-agent/src/: lib.rs  llm.rs  llm_log.rs  loop_detection.rs  runtime.rs  sandbox.rs  sessions.rs  subagent.rs  tools.rs  watchdog.rs  workspace.rs
crates/openclaw-agent/src/llm/: anthropic.rs  fallback.rs  mod.rs  streaming.rs
crates/openclaw-agent/src/tools/: browser.rs  claude_code.rs  cron.rs  delegate.rs  exec.rs  find.rs  grep.rs  image.rs  list_dir.rs  mcp_bridge.rs  memory.rs  patch.rs  process.rs  read.rs  script_plugin.rs  sessions.rs  tasks.rs  tts.rs  web_fetch.rs  web_search.rs  write.rs
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: main.rs
crates/openclaw-cli/src/commands/: agent.rs  arena.rs  chat.rs  config.rs  cron.rs  db.rs  gateway.rs  mod.rs  models.rs  orch.rs  sessions.rs  skills.rs
crates/openclaw-core/: Cargo.toml
crates/openclaw-core/src/: config.rs  cron.rs  lib.rs  models.rs  paths.rs  sessions.rs  skills.rs
crates/openclaw-db/: Cargo.toml
crates/openclaw-db/src/: context.rs  cron.rs  lib.rs  llm_log.rs  messages.rs  metrics.rs  sessions.rs
crates/openclaw-gateway/: Cargo.toml  Dockerfile  build.rs
crates/openclaw-gateway/src/: config.rs  cron.rs  debounce.rs  discord.rs  discord_handler.rs  doctor.rs  handler.rs  handler_utils.rs  main.rs  metrics.rs  orch_commands.rs  ratelimit.rs  subagent_registry.rs  task_registry.rs  telegram.rs
crates/openclaw-mcp/: Cargo.toml
crates/openclaw-mcp/src/: lib.rs  protocol.rs  server.rs  tasks.rs  tools.rs
crates/openclaw-mcp/src/transport/: sse.rs  stdio.rs
crates/openclaw-orchestrator/: Cargo.toml
crates/openclaw-orchestrator/src/: lib.rs
crates/openclaw-orchestrator/src/app/: budget_projector.rs  cycle_projector.rs  errors.rs  instance_projector.rs  janitor.rs  maintenance_service.rs  merge_service.rs  mod.rs  planner.rs  projector.rs  reconciler.rs  run_projector.rs  scheduler.rs  task_projector.rs  tick_coordinator.rs  verifier.rs  worker_service.rs
crates/openclaw-orchestrator/src/domain/: actor.rs  errors.rs  events.rs  git.rs  mod.rs  planner.rs  ports.rs  states.rs  types.rs  verification.rs  worker.rs
crates/openclaw-orchestrator/src/infra/: errors.rs  event_store.rs  event_stream.rs  git.rs  mod.rs  planner.rs  worker.rs
crates/openclaw-orchestrator/tests/: lifecycle_integration.rs
crates/openclaw-ui/: AUDIT-REPAIRS.md  Cargo.toml  build.sh
crates/openclaw-ui/src/: auth.rs  dispatch.rs  errors.rs  frontend.rs  main.rs  pagination.rs  router.rs  state.rs
crates/openclaw-ui/src/routes/: budgets.rs  cycles.rs  events.rs  instances.rs  mod.rs  runs.rs  tasks.rs  ws.rs
crates/openclaw-ui/src/static/: app.js  index.html  styles.css
crates/openclaw-ui/src/ts/: api.ts  app.ts  store.ts  types.ts  utils.ts  ws.ts
crates/openclaw-ui/src/ts/components/: cycle-detail.ts  event-timeline.ts  instance-detail.ts  instance-list.ts
docs/: ARCHITECTURE.md  NETWORKING-FUNDAMENTALS.md  REVIEWER-ARCHITECTURE.md
docs/plans/: 2026-02-27-orchestrator-implementation-plan.md  2026-02-27-sdlc-orchestrator-design.md  2026-02-27-sdlc-orchestrator-impl.md
migrations/: 002_orchestrator.sql  init.sql
scripts/: check-upstream.sh  pg-backup.sh  sync-upstream.sh
