[workspace]
resolver = "2"
members = [
    "crates/openclaw-cli",
    "crates/openclaw-core",
    "crates/openclaw-agent",
    "crates/openclaw-gateway",
]

[workspace.package]
version = "0.45.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aitanCloud/openclaw-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
urlencoding = "2"
base64 = "0.22"
