[package]
name = "openclaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openclaw-core = { path = "../openclaw-core" }
openclaw-db = { path = "../openclaw-db" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
