[package]
name = "openclaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openclaw"
path = "src/main.rs"

[dependencies]
openclaw-core = { path = "../openclaw-core" }
openclaw-agent = { path = "../openclaw-agent" }
openclaw-db = { path = "../openclaw-db" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
