[package]
name = "openclaw-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openclaw-gateway"
path = "src/main.rs"

[dependencies]
openclaw-core = { path = "../openclaw-core" }
openclaw-agent = { path = "../openclaw-agent" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = "0.8"
base64 = { workspace = true }
dirs = { workspace = true }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = { workspace = true }

[build-dependencies]
chrono = "0.4"
