[package]
name = "openclaw-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "openclaw_mcp"
path = "src/lib.rs"

[dependencies]
openclaw-core = { path = "../openclaw-core" }
openclaw-agent = { path = "../openclaw-agent" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = "0.8"
futures-util = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3"
