[package]
name = "openclaw-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openclaw-orch"
path = "src/main.rs"

[dependencies]
openclaw-orchestrator = { path = "../openclaw-orchestrator" }
openclaw-db = { path = "../openclaw-db" }
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
base64 = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
